--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "{{cookiecutter.description}}"
+authors = ["{{cookiecutter.name}} {{cookiecutter.mail}}"]
 
 [tool.poetry.dependencies]
-python = "=3.9"
+python = "={{cookiecutter.python_version}}"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
