--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -9,6 +9,7 @@ python = "^{{cookiecutter.python_version}}"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+jupyterlab = "^3.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
